testing ssg stuff

--- a/speedrun/shep_splits.html
+++ b/speedrun/shep_splits.html
@@ -145,7 +145,7 @@
         <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
           <thead>
             <tr style="background-color: #f0f0f0;">
-              <th>Title</th>
+              <th>Level Name</th>
               <th>Personal Best</th>
               <th>Live</th>
             </tr>
