testing ssg stuff

--- a/speedrun/shep_splits.html
+++ b/speedrun/shep_splits.html
@@ -93,7 +93,7 @@
 
     <button class="nav-button" onclick="toggleMenu('africaMenu')">Africa Splits</button>
     <div class="submenu" id="africaMenu">
-		<button class="nav-button" onclick="loadSplits('http:/terrifyingbridge.github.io/speedrun/splits/africa_captials.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https:/terrifyingbridge.github.io/speedrun/splits/africa_captials.json')">Capitals</button>
 		<button class="nav-button">Countries</button>
 		<button class="nav-button">Landscapes</button>
 		<button class="nav-button">100%</button>
