--- a/speedrun/shep_splits.html
+++ b/speedrun/shep_splits.html
@@ -64,10 +64,10 @@
     }
 
     .main-title {
-		font-size: 2rem;
-		margin-bottom: 1rem;
-		line-height: 1.3;
-		text-align: center;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      line-height: 1.3;
+      text-align: center;
     }
 
     .program-area {
@@ -87,32 +87,12 @@
   </style>
 </head>
 <body>
-
   <div class="sidebar">
     <h2>Splits</h2>
-
     <button class="nav-button" onclick="toggleMenu('africaMenu')">Africa Splits</button>
     <div class="submenu" id="africaMenu">
-		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_capitals.json')">Capitals</button>
-		<button class="nav-button">Countries</button>
-		<button class="nav-button">Landscapes</button>
-		<button class="nav-button">100%</button>
-    </div>
-
-    <button class="nav-button" onclick="toggleMenu('asiaMenu')">Asia Splits</button>
-    <div class="submenu" id="asiaMenu">
-		<button class="nav-button">Capitals</button>
-		<button class="nav-button">Countries</button>
-		<button class="nav-button">Landscapes</button>
-		<button class="nav-button">100%</button>
-    </div>
-
-    <button class="nav-button" onclick="toggleMenu('canadaMenu')">Canada Splits</button>
-    <div class="submenu" id="canadaMenu">
-		<button class="nav-button">Capitals</button>
-		<button class="nav-button">Provinces</button>
-		<button class="nav-button">Landscapes</button>
-		<button class="nav-button">100%</button>
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_countries.json')">Countries</button>
     </div>
   </div>
 
@@ -121,10 +101,7 @@
       Sheppard Software Geography<br>
       Single Segment Splits
     </div>
-
-    <div class="program-area">
-      Select the splits to start
-    </div>
+    <div class="program-area">Select the splits to start</div>
   </div>
 
   <script>
@@ -132,156 +109,148 @@
       const menu = document.getElementById(id);
       menu.style.display = menu.style.display === 'block' ? 'none' : 'block';
     }
-  </script>
-	
-<script>
-  let comparisonData = {};
-  let userPBs = [];
-  let liveTimes = [];
-  let activeComparison = "personalBest";
 
-  async function loadSplits(filename) {
-    try {
-      const res = await fetch(filename);
-      const data = await res.json();
+    let comparisonData = {};
+    let userPBs = [];
+    let liveTimes = [];
+    let activeComparison = "worldRecord";
 
-      comparisonData = data;
-      liveTimes = Array(data.titles.length).fill("");
-      userPBs = data.defaultPB || Array(data.titles.length).fill("");
-
-      renderSplitUI();
-    } catch (err) {
-      console.error("Failed to load split data:", err);
-      document.querySelector('.program-area').innerHTML = "<p>Error loading split data.</p>";
-    }
-  }
-
-  function formatTime(seconds) {
-    if (isNaN(seconds)) return "";
-    const total = Math.round(seconds);
-    const min = Math.floor(total / 60);
-    const sec = total % 60;
-    return `${min}:${sec.toString().padStart(2, '0')}`;
-  }
-
-  function renderSplitUI() {
-    const titles = comparisonData.titles;
-    const comparisonSet = activeComparison === "personalBest" ? userPBs : comparisonData.worldRecord;
-
-    let dropdown = `
-      <label for="comparison-select"><strong>Comparison:</strong></label>
-      <select id="comparison-select" onchange="changeComparison(this.value)">
-        <option value="personalBest" ${activeComparison === "personalBest" ? "selected" : ""}>Personal Best</option>
-        <option value="worldRecord" ${activeComparison === "worldRecord" ? "selected" : ""}>World Record</option>
-      </select>
-      <br><br>
-    `;
-
-    let rows = titles.map((title, i) => {
-      const comp = comparisonSet[i];
-      const live = Number(liveTimes[i]);
-      const delta = !isNaN(live) ? (live - comp) : "";
-
-      return `
-        <tr>
-          <td>${title}</td>
-
-          <td>
-            ${activeComparison === "personalBest" ? `
-              <input 
-                type="number"
-                min="0"
-                step="1"
-                value="${userPBs[i] || ""}" 
-                data-index="${i}"
-                oninput="updatePB(event)"
-                style="width: 80px; text-align: center;"
-              />` : formatTime(comp)}
-          </td>
-
-          <td>
-            <input 
-              type="number"
-              min="0"
-              step="1"
-              value="${liveTimes[i] || ""}" 
-              data-index="${i}"
-              oninput="updateLive(event)"
-              style="width: 80px; text-align: center;"
-            />
-          </td>
-
-          <td>${!isNaN(delta) ? (delta >= 0 ? "+" : "") + formatTime(Math.abs(delta)) : ""}</td>
-        </tr>
-      `;
-    }).join('');
-
-    const totals = getTotals();
-
-    const html = `
-      <h3>Live Split Tracker</h3>
-      ${dropdown}
-      <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
-        <thead>
-          <tr style="background-color: #f0f0f0;">
-            <th>Title</th>
-            <th>${activeComparison === "personalBest" ? "Personal Best" : "World Record"}</th>
-            <th>Live</th>
-            <th>Δ</th>
-          </tr>
-        </thead>
-        <tbody>${rows}</tbody>
-      </table>
-
-      <div style="margin-top: 1rem; font-weight: bold; text-align: center;">
-        ${totals.count > 0
-          ? `Live Total: ${formatTime(totals.liveTotal)}<br>
-             Comparison Total: ${formatTime(totals.comparisonTotal)}<br>
-             Overall Δ: ${(totals.liveTotal - totals.comparisonTotal >= 0 ? "+" : "") + formatTime(Math.abs(totals.liveTotal - totals.comparisonTotal))}`
-          : `Enter times above to see totals.`}
-      </div>
-    `;
-
-    document.querySelector('.program-area').innerHTML = html;
-  }
-
-  function updateLive(e) {
-    const index = e.target.dataset.index;
-    liveTimes[index] = e.target.value;
-    renderSplitUI();
-  }
-
-  function updatePB(e) {
-    const index = e.target.dataset.index;
-    userPBs[index] = e.target.value;
-    renderSplitUI();
-  }
-
-  function changeComparison(newValue) {
-    activeComparison = newValue;
-    renderSplitUI();
-  }
-
-  function getTotals() {
-    const comparisonSet = activeComparison === "personalBest" ? userPBs : comparisonData.worldRecord;
-    let liveTotal = 0;
-    let comparisonTotal = 0;
-    let count = 0;
-
-    for (let i = 0; i < liveTimes.length; i++) {
-      const live = Number(liveTimes[i]);
-      const comp = Number(comparisonSet[i]);
-
-      if (!isNaN(live) && !isNaN(comp)) {
-        count++;
-        liveTotal += live;
-        comparisonTotal += comp;
+    async function loadSplits(filename) {
+      try {
+        const res = await fetch(filename);
+        const data = await res.json();
+        comparisonData = data;
+        liveTimes = Array(data.titles.length).fill("");
+        userPBs = data.defaultPB || Array(data.titles.length).fill("");
+        renderSplitUI();
+      } catch (err) {
+        console.error("Failed to load split data:", err);
+        document.querySelector('.program-area').innerHTML = "<p>Error loading split data.</p>";
       }
     }
 
-    return { count, liveTotal, comparisonTotal };
-  }
-</script>
+    function formatTime(seconds) {
+      if (isNaN(seconds)) return "";
+      const total = Math.round(seconds);
+      const hrs = Math.floor(total / 3600);
+      const mins = Math.floor((total % 3600) / 60);
+      const secs = total % 60;
+      return hrs > 0
+        ? `${hrs}:${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`
+        : `${mins}:${secs.toString().padStart(2, '0')}`;
+    }
 
+    function renderSplitUI() {
+      const titles = comparisonData.titles;
+      const comparisonSet = activeComparison === "personalBest" ? userPBs : comparisonData.worldRecord;
+
+      let dropdown = `
+        <label for="comparison-select"><strong>Comparison:</strong></label>
+        <select id="comparison-select" onchange="changeComparison(this.value)">
+		  <option value="worldRecord" ${activeComparison === "worldRecord" ? "selected" : ""}>World Record</option>
+          <option value="personalBest" ${activeComparison === "personalBest" ? "selected" : ""}>Personal Best</option>
+        </select>
+        <br><br>
+      `;
+
+      let rows = titles.map((title, i) => {
+        const comp = Number(comparisonSet[i]);
+        const live = Number(liveTimes[i]);
+        const delta = !isNaN(live) ? (live - comp) : "";
+        return `
+          <tr>
+            <td>${title}</td>
+            <td>${activeComparison === "personalBest" ? `<input type="number" min="0" step="1" value="${userPBs[i] || ""}" data-index="${i}" oninput="updatePB(event)" style="width: 80px; text-align: center;" />` : formatTime(comp)}</td>
+            <td><input type="number" min="0" step="1" value="${liveTimes[i] || ""}" data-index="${i}" oninput="updateLive(event)" style="width: 80px; text-align: center;" /></td>
+            <td id="delta-${i}" style="color: ${delta < 0 ? 'darkgreen' : 'darkred'};">
+  ${!isNaN(delta) ? (delta < 0 ? "-" : "+") + formatTime(Math.abs(delta)) : ""}
+</td>
+          </tr>
+        `;
+      }).join('');
+
+      const totals = getTotals();
+
+      const html = `
+        <h3>Live Split Tracker</h3>
+        ${dropdown}
+        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+          <thead>
+            <tr style="background-color: #f0f0f0;">
+              <th>Title</th>
+              <th>${activeComparison === "personalBest" ? "Personal Best" : "World Record"}</th>
+              <th>Live</th>
+              <th>Δ</th>
+            </tr>
+          </thead>
+          <tbody>${rows}</tbody>
+        </table>
+        <div id="summary-line" style="margin-top: 1rem; font-weight: bold; text-align: center;">
+          ${totals.count > 0
+            ? `Live Total: ${formatTime(totals.liveTotal)} &nbsp;|&nbsp; Comparison Total: ${formatTime(totals.comparisonTotal)} &nbsp;|&nbsp; Overall Δ: ${(totals.liveTotal - totals.comparisonTotal >= 0 ? "+" : "") + formatTime(Math.abs(totals.liveTotal - totals.comparisonTotal))}`
+            : `Enter times above to see totals.`}
+        </div>
+      `;
+
+      document.querySelector('.program-area').innerHTML = html;
+    }
+
+    function updateLive(e) {
+      const index = e.target.dataset.index;
+      const value = Number(e.target.value);
+      liveTimes[index] = value;
+      const comp = activeComparison === "personalBest" ? Number(userPBs[index]) : Number(comparisonData.worldRecord[index]);
+      const deltaCell = document.getElementById(`delta-${index}`);
+      const delta = !isNaN(value) && !isNaN(comp) ? (value - comp) : null;
+      deltaCell.textContent = delta !== null ? (delta < 0 ? "-" : "+") + formatTime(Math.abs(delta)) : "";
+  deltaCell.style.color = delta < 0 ? 'darkgreen' : 'darkred';
+      updateSummary();
+    }
+
+    function updatePB(e) {
+      const index = e.target.dataset.index;
+      const value = Number(e.target.value);
+      userPBs[index] = value;
+      if (activeComparison === "personalBest") {
+        const live = Number(liveTimes[index]);
+        const delta = !isNaN(live) && !isNaN(value) ? (live - value) : null;
+        const deltaCell = document.getElementById(`delta-${index}`);
+        deltaCell.textContent = delta !== null ? (delta < 0 ? "-" : "+") + formatTime(Math.abs(delta)) : "";
+        updateSummary();
+      }
+    }
+
+    function changeComparison(newValue) {
+      activeComparison = newValue;
+      renderSplitUI();
+    }
+
+    function getTotals() {
+      const comparisonSet = activeComparison === "personalBest" ? userPBs : comparisonData.worldRecord;
+      let liveTotal = 0;
+      let comparisonTotal = 0;
+      let count = 0;
+      for (let i = 0; i < liveTimes.length; i++) {
+        const live = Number(liveTimes[i]);
+        const comp = Number(comparisonSet[i]);
+        if (!isNaN(live) && !isNaN(comp)) {
+          count++;
+          liveTotal += live;
+          comparisonTotal += comp;
+        }
+      }
+      return { count, liveTotal, comparisonTotal };
+    }
+
+    function updateSummary() {
+      const totals = getTotals();
+      const summaryDiv = document.getElementById("summary-line");
+      if (summaryDiv) {
+        summaryDiv.innerHTML = totals.count > 0
+          ? `Live Total: ${formatTime(totals.liveTotal)} &nbsp;|&nbsp; Comparison Total: ${formatTime(totals.comparisonTotal)} &nbsp;|&nbsp; Overall Δ: ${(totals.liveTotal - totals.comparisonTotal >= 0 ? "+" : "-") + formatTime(Math.abs(totals.liveTotal - totals.comparisonTotal))}`
+          : `Enter times above to see totals.`;
+      }
+    }
+  </script>
 </body>
 </html>
