--- a/speedrun/shep_splits.html
+++ b/speedrun/shep_splits.html
@@ -96,6 +96,8 @@
     <div class="submenu" id="africaMenu">
       <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_capitals.json')">Capitals</button>
 		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_100.json')">100%</button>
     </div>
   </div>
 
