--- a/speedrun/shep_splits.html
+++ b/speedrun/shep_splits.html
@@ -99,6 +99,72 @@
 		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_land.json')">Landscapes</button>
 		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/africa_100.json')">100%</button>
     </div>
+	  <button class="nav-button" onclick="toggleMenu('asiaMenu')">Asia Splits</button>
+    <div class="submenu" id="asiaMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/asia_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/asia_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/asia_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/asia_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('canadaMenu')">Canada Splits</button>
+    <div class="submenu" id="canadaMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/canada_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/canada_countries.json')">Provinces</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/canada_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/canada_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('caribbeanMenu')">Caribbean Splits</button>
+    <div class="submenu" id="caribbeanMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/caribbean_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/caribbean_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/caribbean_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('europeMenu')">Europe Splits</button>
+    <div class="submenu" id="europeMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/europe_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/europe_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/europe_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/europe_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('mexicoMenu')">Mexico Splits</button>
+    <div class="submenu" id="mexicoMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/mexico_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/mexico_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/mexico_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/mexico_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('middleMenu')">Middle East Splits</button>
+    <div class="submenu" id="middleMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/middle_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/middle_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/middle_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/middle_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('oceaniaMenu')">Oceania Splits</button>
+    <div class="submenu" id="oceaniaMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/oceania_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/oceania_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/oceania_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/oceania_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('southcentralMenu')">South and Central America Splits</button>
+    <div class="submenu" id="southcentralMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/southcentral_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/southcentral_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/southcentral_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/southcentral_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('usMenu')">United States Splits</button>
+    <div class="submenu" id="usMenu">
+      <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/us_capitals.json')">Capitals</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/us_countries.json')">Countries</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/us_land.json')">Landscapes</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/us_100.json')">100%</button>
+    </div>
+	  <button class="nav-button" onclick="toggleMenu('worldMenu')">World Splits</button>
+    <div class="submenu" id="worldMenu">
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/world.json')">100%</button>
+    </div>
   </div>
 
   <div class="main-content">
