--- a/speedrun/shep_splits.html
+++ b/speedrun/shep_splits.html
@@ -165,6 +165,30 @@
     <div class="submenu" id="worldMenu">
 		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/world.json')">100%</button>
     </div>
+      <button class="nav-button" onclick="toggleMenu('universalMenu')">Universal Level Splits</button>
+    <div class="submenu" id="universalMenu">
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level1r.json')">All Quizzes Level 1 Regional</button>
+		<button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level1n.json')">All Quizzes Level 1 National</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level2.json')">All Quizzes Level 2</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level3.json')">All Quizzes Level 3</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level4.json')">All Quizzes Level 4</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level5.json')">All Quizzes Level 5</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level6.json')">All Quizzes Level 6</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level7.json')">All Quizzes Level 7</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level8.json')">All Quizzes Level 8</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_level9.json')">All Quizzes Level 9</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_cap1.json')">All Capital Quizzes Level 1</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_cap2.json')">All Capital Quizzes Level 2</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_cap3.json')">All Capital Quizzes Level 3</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universal_cap4.json')">All Capital Quizzes Level 4</button>
+    </div>
+      <button class="nav-button" onclick="toggleMenu('universeMenu')">Universe Geography Splits</button>
+    <div class="submenu" id="universeMenu">
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universe_capitals.json')">Universe Capitals</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universe_countries.json')">Universe Countries</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universe_landscapes.json')">Universe Landscapes</button>
+        <button class="nav-button" onclick="loadSplits('https://terrifyingbridge.github.io/speedrun/splits/universe_100.json')">Universe 100%</button>
+    </div>
   </div>
 
   <div class="main-content">
