--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
     <p>Welcome to my personal website! <br> click the links below to navigate to the various projects I've worked on!</p>
     <div class="buttons">
 		<a href="#blog">Blog</a>
-		<a href="#projects">Personal Projects</a>
-		<a href="speedrun/speedrun.html">Speedrunning Tools</a>
+		<a href="projects/projects.html">Personal Projects</a>
     </div>
   </header>
 
