--- a/index.html
+++ b/index.html
@@ -1,100 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Christina Greenfield</title>
   <style>
-    html {
-      scroll-behavior: smooth;
-    }
-
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #eef2f3, #8e9eab);
+      background-color: #f4f4f9;
       color: #333;
     }
 
     header {
-      min-height: 100vh;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
-      text-align: center;
-      padding: 2rem;
+      padding: 1.5rem 2rem;
+      background-color: #ffffff;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
 
-    header h1 {
-      font-size: 3rem;
+    .site-title {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    nav a {
+      margin-left: 1.5rem;
+      text-decoration: none;
+      color: #333;
+      font-weight: 500;
+      transition: color 0.3s ease;
+    }
+
+    nav a:hover {
+      color: #007acc;
+    }
+
+    .intro {
+      max-width: 800px;
+      margin: 100px auto;
+      text-align: center;
+      padding: 0 1rem;
+    }
+
+    .intro img {
+      max-width: 200px;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+    }
+
+    .intro h1 {
+      font-size: 2.5rem;
       margin-bottom: 0.5rem;
     }
 
-    header p {
+    .intro p {
       font-size: 1.2rem;
-      margin-bottom: 2rem;
-    }
-
-    .buttons a {
-      display: inline-block;
-      margin: 0.5rem;
-      padding: 0.75rem 1.5rem;
-      border: 2px solid #333;
-      border-radius: 6px;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-      transition: all 0.3s ease-in-out;
-    }
-
-    .buttons a:hover {
-      background-color: #333;
-      color: #fff;
+      color: #555;
     }
 
     section {
-      padding: 4rem 2rem;
       max-width: 800px;
-      margin: auto;
+      margin: 80px auto;
+      padding: 0 1rem;
     }
 
-    section h2 {
-      font-size: 2rem;
+    section img {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
       margin-bottom: 1rem;
-      border-bottom: 2px solid #333;
-      padding-bottom: 0.5rem;
+      border-radius: 12px;
+      background-color: #ddd;
     }
 
-    section p {
-      font-size: 1rem;
-      line-height: 1.6;
+    @media (max-width: 600px) {
+      nav {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+      }
+
+      nav a {
+        margin: 0.5rem 0 0;
+      }
     }
 
-    footer {
-      text-align: center;
-      padding: 2rem;
-      font-size: 0.9rem;
-      background-color: #f5f5f5;
+    html {
+      scroll-behavior: smooth;
     }
   </style>
 </head>
 <body>
 
-  <!-- Title Section -->
-  <header>
-    <h1>Christina Greenfield</h1>
-    <p>Welcome to my personal website! <br> click the links below to navigate to the various projects I've worked on!</p>
-    <div class="buttons">
-		<a href="#blog">Blog</a>
-		<a href="projects/projects.html">Personal Projects</a>
-    </div>
-  </header>
+<header>
+  <div class="site-title">Christina Greenfield</div>
+  <nav>
+    <a href="#about">About (Coming Soon)</a>
+    <a href="#cv">CV (Coming Soon)</a>
+    <a href="projects/projects.html">Projects</a>
+    <a href="#blog">Blog (Coming Soon)</a>
+    <a href="#contact">Contact (Coming Soon)</a>
+  </nav>
+</header>
 
-  <!-- Footer -->
-  <footer>
-    &copy; 2025 Christina Greenfield · <a href="mailto:you@example.com">Contact (under construction)</a> · <a href="https://github.com/yourusername">GitHub (under construction)</a>
-  </footer>
+<main class="intro">
+  <img src="placeholder-profile.png" alt="Placeholder for profile image">
+  <h1>Hi, I’m Christina Greenfield</h1>
+  <p>Welcome to my personal website! This is mostly used to show off my personal projects but also contain other fun things as well (I hope)</p>
+</main>
 
 </body>
 </html>
