--- a/projects/projects.html
+++ b/projects/projects.html
@@ -1,11 +1,142 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>speedrun</title>
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Projects</title>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root {
+      --bg: #f5f7fa;
+      --primary: #1a1a1a;
+      --secondary: #444;
+      --accent: #2e86de;
+      --card-bg: #ffffff;
+    }
 
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Inter', sans-serif;
+      background-color: var(--bg);
+      color: var(--primary);
+      padding: 0 20px;
+    }
+
+    header {
+      max-width: 900px;
+      margin: 3rem auto 2rem;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 0.5rem;
+    }
+
+    .description {
+      font-size: 1.125rem;
+      color: var(--secondary);
+      max-width: 700px;
+      margin: 0 auto;
+    }
+
+    .section-header {
+      max-width: 900px;
+      margin: 3rem auto 1rem;
+      font-size: 1.5rem;
+      font-weight: 600;
+      border-left: 4px solid var(--accent);
+      padding-left: 0.75rem;
+    }
+
+    .project-grid {
+      max-width: 900px;
+      margin: 0 auto;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+    }
+
+    .project-card {
+      display: block;
+      width: 260px;
+      height: 180px;
+      border-radius: 12px;
+      overflow: hidden;
+      background-size: cover;
+      background-position: center;
+      text-decoration: none;
+      color: white;
+      font-weight: 600;
+      position: relative;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.08);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      flex-shrink: 0;
+    }
+
+    .project-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.12);
+    }
+
+    .project-card .overlay {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      padding: 0.75rem 1rem;
+      background: linear-gradient(to top, rgba(0, 0, 0, 0.7), transparent);
+      z-index: 1;
+    }
+
+    @media (max-width: 600px) {
+      h1 {
+        font-size: 2rem;
+      }
+
+      .description {
+        font-size: 1rem;
+      }
+
+      .section-header {
+        font-size: 1.25rem;
+      }
+
+      .project-card {
+        width: 100%;
+        max-width: 100%;
+      }
+    }
+  </style>
+</head>
 <body>
-	<a href="shep_splits.html">Temp link to splits</a>
+
+  <header>
+    <h1>Personal Projects</h1>
+    <p class="description">
+      A list of my personal projects organized by category. Click the box for the project to invesitage further!
+    </p>
+  </header>
+
+  <div class="section-header">Physics Based Projects</div>
+  <div class="project-grid">
+    <a href="#" class="project-card" style="background-image: url('another-image.jpg');">
+      <div class="overlay">Coming Soon</div>
+    </a>
+  </div>
+
+  <div class="section-header">Speedrunning Tools</div>
+  <div class="project-grid">
+    <a href="shep_splits/shep_splits.html" class="project-card" style="background-image: url('project_pics/splits.png');">
+      <div class="overlay">Sheppard Software Geography Live Splits</div>
+    </a>
+  </div>
+
 </body>
 </html>
