started other project

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -126,8 +126,8 @@
 
   <div class="section-header">Physics Based Projects</div>
   <div class="project-grid">
-    <a href="#" class="project-card" style="background-image: url('another-image.jpg');">
-      <div class="overlay">Coming Soon</div>
+    <a href="planet_system/plant_system.html" class="project-card" style="background-image: url('another-image.jpg');">
+      <div class="overlay">Planetary Systems Project</div>
     </a>
   </div>
 
