Adding optimal path game

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -124,6 +124,13 @@
     </p>
   </header>
 
+  <div class="section-header">Math Based Projects</div>
+  <div class="project-grid">
+    <a href="path_game/path_game.html" class="project-card" style="background-image: url('project_pics/path_game_pic.png');">
+      <div class="overlay">Optimal Path Game</div>
+    </a>
+  </div>
+
   <div class="section-header">Physics Based Projects</div>
   <div class="project-grid">
     <a href="planet_system/plant_system.html" class="project-card" style="background-image: url('another-image.jpg');">
